--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "param.h": "c",
         "user.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
