--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "param.h": "c",
         "user.h": "c",
         "atomic": "c",
-        "*.tcc": "c"
+        "*.tcc": "c",
+        "defs.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
